# franka-fr3-wireless-spacemouse

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/franka_single_arm_controllers/: CMakeLists.txt  franka_single_arm_controllers.xml  package.xml
src/franka_single_arm_controllers/config/: controllers.yaml
src/franka_single_arm_controllers/include/franka_single_arm_controllers/: cartesian_velocity_controller.hpp  joint_impedance_ik_controller.hpp  linear_ramp_up_controller.hpp
src/franka_single_arm_controllers/launch/: cartesian_velocity_controller.launch.py  franka.launch.py  joint_impedance_ik_controller.launch.py
src/franka_single_arm_controllers/src/: cartesian_velocity_controller.cpp  joint_impedance_ik_controller.cpp
src/gripper_manager/: package.xml  setup.py
src/gripper_manager/gripper_manager/: franka_gripper_client.py
src/gripper_manager/launch/: franka_gripper_client.launch.py
src/spacemouse_publisher/: package.xml  setup.py
src/spacemouse_publisher/launch/: spacemouse_publisher.launch.py
src/spacemouse_publisher/spacemouse_publisher/: pyspacemouse_publisher.py
